--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
-  <title> Front End Project | correlucas</title>
+  <title>Clipboard Landing Page | correlucas</title>
 
   <link rel="icon" href="./images/favicon-32x32.png" type="image/x-icon">
 
@@ -14,6 +14,110 @@
 </head>
 
 <body>
+  <main>
+    <img src="./images/logo.svg" alt="clipboard logo">
+    <h1>A history of everything you copy</h1>
+    <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
+    <div class="download">
+      <a href="#">Download for iOS</a>
+      <a href="#">Download for Mac</a>
+    </div>
+  </main>
+
+  <section>
+    <h2>Keep track of your snippets</h2>
+    <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+
+    <article>
+      <img src="./images/image-computer.png" alt="clipboard software">
+
+      <div class="specs">
+        <div>
+          <h3>Quick Search</h3>
+          <p>Easily search your snippets by content, category, web address, application, and more.</p>
+        </div>
+
+        <div>
+          <h3>iCloud Sync</h3>
+          <p>Instantly saves and syncs snippets across all your devices.</p>
+        </div>
+
+        <div>
+          <h3>Complete History</h3>
+          <p>Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
+      </div>
+    </article>
+  </section>
+
+  <section>
+    <h2>Access Clipboard anywhere</h2>
+    <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+    <img src="./images/image-devices.png" alt="clipboard app">
+  </section>
+
+  <section>
+    <h2>Supercharge your workflow</h2>
+    <p>We’ve got the tools to boost your productivity.</p>
+
+    <article class="features">
+      <div>
+        <img src="./images/icon-blacklist.svg" alt="blacklist">
+        <h3>Create blacklists</h3>
+        <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+      </div>
+
+
+      <div>
+        <img src="./images/icon-text.svg" alt="plain text snippets">
+        <h3>Plain text snippets</h3>
+        <p>Remove unwanted formatting from copied text for a consistent look.</p>
+      </div>
+
+
+      <div>
+        <img src="./images/icon-preview.svg" alt="sneak preview">
+        <h3>Sneak preview</h3>
+        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+      </div>
+    </article>
+  </section>
+
+  <section>
+    <img src="./images/logo-google.png" alt="google">
+    <img src="./images/logo-ibm.png" alt="ibm">
+    <img src="./images/logo-microsoft.png" alt="microsoft">
+    <img src="./images/logo-hp.png" alt="hp">
+    <img src="./images/logo-vector-graphics.png" alt="vector graphics">
+  </section>
+
+
+  <section>
+    <h2>Clipboard for iOS and Mac OS</h2>
+    <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
+    <div class="download">
+      <a href="#">Download for iOS</a>
+      <a href="#">Download for Mac</a>
+    </div>
+  </section>
+
+  <footer>
+    <img src="./images/logo.svg" alt="clipboard logo">
+
+    <ul>
+      <li>FAQs</li>
+      <li>Contact Us</li>
+      <li>Privacy Policy</li>
+      <li>Press Kit</li>
+      <li>Install Guide</li>
+    </ul>
+
+    <ul>
+      <li><img src="./images/icon-facebook.svg" alt="facebook"></li>
+      <li><img src="./images/icon-instagram.svg" alt="instagram"></li>
+      <li><img src="./images/icon-twitter.svg" alt="icon-twitter"></li>
+    </ul>
+  </footer>
 
 </body>
 
