--- a/index.html
+++ b/index.html
@@ -15,36 +15,37 @@
 
 <body>
   <main>
-    <img src="./images/logo.svg" alt="clipboard logo">
-    <h1>A history of everything you copy</h1>
-    <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
-    <div class="download">
-      <a href="#">Download for iOS</a>
-      <a href="#">Download for Mac</a>
+    <img class="logo" src="./images/logo.svg" alt="clipboard logo">
+    <h1 class="pb-20">A history of everything you copy</h1>
+    <p class="body pb-40">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
+    <div class="download pb-140">
+      <a class="btn btn-green" href="#">Download for iOS</a>
+      <a class="btn btn-blue" href="#">Download for Mac</a>
     </div>
   </main>
 
   <section>
-    <h2>Keep track of your snippets</h2>
-    <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
-
-    <article>
+    <div class="pb-80">
+      <h2>Keep track of your snippets</h2>
+      <p class="body-medium">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+    </div>
+    <article class="flex-row">
       <img src="./images/image-computer.png" alt="clipboard software">
 
       <div class="specs">
         <div>
           <h3>Quick Search</h3>
-          <p>Easily search your snippets by content, category, web address, application, and more.</p>
+          <p class="body-small">Easily search your snippets by content, category, web address, application, and more.</p>
         </div>
 
         <div>
           <h3>iCloud Sync</h3>
-          <p>Instantly saves and syncs snippets across all your devices.</p>
+          <p class="body-small">Instantly saves and syncs snippets across all your devices.</p>
         </div>
 
         <div>
           <h3>Complete History</h3>
-          <p>Retrieve any snippets from the first moment you started using the app.</p>
+          <p class="body-small">Retrieve any snippets from the first moment you started using the app.</p>
         </div>
       </div>
     </article>
@@ -52,33 +53,33 @@
 
   <section>
     <h2>Access Clipboard anywhere</h2>
-    <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+    <p class="body-medium">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
     <img src="./images/image-devices.png" alt="clipboard app">
   </section>
 
   <section>
     <h2>Supercharge your workflow</h2>
-    <p>We’ve got the tools to boost your productivity.</p>
+    <p class="body-medium">We’ve got the tools to boost your productivity.</p>
 
     <article class="features">
       <div>
         <img src="./images/icon-blacklist.svg" alt="blacklist">
         <h3>Create blacklists</h3>
-        <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        <p class="body-small">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
       </div>
 
 
       <div>
         <img src="./images/icon-text.svg" alt="plain text snippets">
         <h3>Plain text snippets</h3>
-        <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        <p class="body-small">Remove unwanted formatting from copied text for a consistent look.</p>
       </div>
 
 
       <div>
         <img src="./images/icon-preview.svg" alt="sneak preview">
         <h3>Sneak preview</h3>
-        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        <p class="body-small">Quick preview of all snippets on your Clipboard for easy access.</p>
       </div>
     </article>
   </section>
@@ -94,7 +95,7 @@
 
   <section>
     <h2>Clipboard for iOS and Mac OS</h2>
-    <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
+    <p class="body-medium">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
     <div class="download">
       <a href="#">Download for iOS</a>
       <a href="#">Download for Mac</a>
