--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </main>
 
-  <section>
+  <section class="pb-140">
     <div class="pb-80">
       <h2>Keep track of your snippets</h2>
       <p class="body-medium">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
@@ -34,26 +34,26 @@
 
       <div class="specs">
         <div>
-          <h3>Quick Search</h3>
+          <h3 class="pb-10">Quick Search</h3>
           <p class="body-small">Easily search your snippets by content, category, web address, application, and more.</p>
         </div>
 
         <div>
-          <h3>iCloud Sync</h3>
+          <h3 class="pb-10">iCloud Sync</h3>
           <p class="body-small">Instantly saves and syncs snippets across all your devices.</p>
         </div>
 
         <div>
-          <h3>Complete History</h3>
+          <h3 class="pb-10">Complete History</h3>
           <p class="body-small">Retrieve any snippets from the first moment you started using the app.</p>
         </div>
       </div>
     </article>
   </section>
 
-  <section>
+  <section class="flex-column">
     <h2>Access Clipboard anywhere</h2>
-    <p class="body-medium">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+    <p class="body-medium pb-110">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
     <img src="./images/image-devices.png" alt="clipboard app">
   </section>
 
