--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <h2>Keep track of your snippets</h2>
       <p class="body-medium">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
     </div>
-    <article class="flex-row">
-      <img src="./images/image-computer.png" alt="clipboard software">
+    <article class="grid-2x overflow">
+      <img class="computer" src="./images/image-computer.png" alt="clipboard software">
 
       <div class="specs">
         <div>
