--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </main>
 
   <section class="pb-140">
-    <div class="pb-80">
-      <h2>Keep track of your snippets</h2>
+    <div class="pb-180">
+      <h2 class="pb-20">Keep track of your snippets</h2>
       <p class="body-medium">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
     </div>
     <article class="grid-2x overflow">
@@ -51,40 +51,40 @@
     </article>
   </section>
 
-  <section class="flex-column">
-    <h2>Access Clipboard anywhere</h2>
+  <section class="flex-column pt-20">
+    <h2 class="pb-20">Access Clipboard anywhere</h2>
     <p class="body-medium pb-110">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
-    <img src="./images/image-devices.png" alt="clipboard app">
+    <img class="pb-110" src="./images/image-devices.png" alt="clipboard app">
   </section>
 
   <section>
-    <h2>Supercharge your workflow</h2>
-    <p class="body-medium">We’ve got the tools to boost your productivity.</p>
+    <h2 class="pb-20">Supercharge your workflow</h2>
+    <p class="body-medium pb-80">We’ve got the tools to boost your productivity.</p>
 
-    <article class="features">
-      <div>
-        <img src="./images/icon-blacklist.svg" alt="blacklist">
+    <article class="features pb-140">
+      <div class="flex-icon">
+        <img class="icon" src="./images/icon-blacklist.svg" alt="blacklist">
         <h3>Create blacklists</h3>
         <p class="body-small">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
       </div>
 
 
-      <div>
-        <img src="./images/icon-text.svg" alt="plain text snippets">
+      <div class="flex-icon">
+        <img class="icon" src="./images/icon-text.svg" alt="plain text snippets">
         <h3>Plain text snippets</h3>
         <p class="body-small">Remove unwanted formatting from copied text for a consistent look.</p>
       </div>
 
 
-      <div>
-        <img src="./images/icon-preview.svg" alt="sneak preview">
+      <div class="flex-icon">
+        <img class="icon" src="./images/icon-preview.svg" alt="sneak preview">
         <h3>Sneak preview</h3>
         <p class="body-small">Quick preview of all snippets on your Clipboard for easy access.</p>
       </div>
     </article>
   </section>
 
-  <section>
+  <section class="flex-row pb-140">
     <img src="./images/logo-google.png" alt="google">
     <img src="./images/logo-ibm.png" alt="ibm">
     <img src="./images/logo-microsoft.png" alt="microsoft">
@@ -93,31 +93,37 @@
   </section>
 
 
-  <section>
-    <h2>Clipboard for iOS and Mac OS</h2>
-    <p class="body-medium">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
-    <div class="download">
-      <a href="#">Download for iOS</a>
-      <a href="#">Download for Mac</a>
+  <section class="pb-110">
+    <h2 class="pb-20">Clipboard for iOS and Mac OS</h2>
+    <p class="body-medium pb-40">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
+    <div class="download-footer">
+      <a class="btn btn-green" href="#">Download for iOS</a>
+      <a class="btn btn-blue" href="#">Download for Mac</a>
     </div>
   </section>
 
   <footer>
-    <img src="./images/logo.svg" alt="clipboard logo">
+    <div class="footer-container flex-row">
+      <img class="logo-white" src="./images/logo-white.svg" alt="clipboard logo">
 
-    <ul>
-      <li>FAQs</li>
-      <li>Contact Us</li>
-      <li>Privacy Policy</li>
-      <li>Press Kit</li>
-      <li>Install Guide</li>
-    </ul>
+      <ul class="flex-list">
+        <div class="list">
+          <li>FAQs</li>
+          <li>Contact Us</li>
+        </div>
+        <div class="list">
+          <li>Privacy Policy</li>
+          <li>Press Kit</li>
+        </div>
+        <li>Install Guide</li>
+      </ul>
 
-    <ul>
-      <li><img src="./images/icon-facebook.svg" alt="facebook"></li>
-      <li><img src="./images/icon-instagram.svg" alt="instagram"></li>
-      <li><img src="./images/icon-twitter.svg" alt="icon-twitter"></li>
-    </ul>
+      <ul>
+        <li><img src="./images/icon-facebook.svg" alt="facebook"></li>
+        <li><img src="./images/icon-instagram.svg" alt="instagram"></li>
+        <li><img src="./images/icon-twitter.svg" alt="icon-twitter"></li>
+      </ul>
+    </div>
   </footer>
 
 </body>
