--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <main>
+  <main class="container">
     <img class="logo" src="./images/logo.svg" alt="clipboard logo">
     <h1 class="pb-20">A history of everything you copy</h1>
     <p class="body pb-40">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
@@ -24,7 +24,7 @@
     </div>
   </main>
 
-  <section class="pb-140">
+  <section class="container pb-140">
     <div class="pb-180">
       <h2 class="pb-20">Keep track of your snippets</h2>
       <p class="body-medium">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
@@ -51,13 +51,13 @@
     </article>
   </section>
 
-  <section class="flex-column pt-20">
+  <section class="container flex-column pt-20">
     <h2 class="pb-20">Access Clipboard anywhere</h2>
     <p class="body-medium pb-110">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
     <img class="pb-110" src="./images/image-devices.png" alt="clipboard app">
   </section>
 
-  <section>
+  <section class="container">
     <h2 class="pb-20">Supercharge your workflow</h2>
     <p class="body-medium pb-80">We’ve got the tools to boost your productivity.</p>
 
@@ -84,7 +84,7 @@
     </article>
   </section>
 
-  <section class="flex-row pb-140">
+  <section class="container flex-row-logo pb-140">
     <img src="./images/logo-google.png" alt="google">
     <img src="./images/logo-ibm.png" alt="ibm">
     <img src="./images/logo-microsoft.png" alt="microsoft">
@@ -93,7 +93,7 @@
   </section>
 
 
-  <section class="pb-110">
+  <section class="container pb-110">
     <h2 class="pb-20">Clipboard for iOS and Mac OS</h2>
     <p class="body-medium pb-40">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
     <div class="download-footer">
