--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
   <main class="container">
-    <img class="logo" src="./images/logo.svg" alt="clipboard logo">
+    <a href="#"> <img class="logo" src="./images/logo.svg" alt="clipboard logo"></a>
+
     <h1 class="pb-20">A history of everything you copy</h1>
     <p class="body pb-40">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
     <div class="download pb-140">
@@ -103,25 +104,22 @@
   </section>
 
   <footer>
-    <div class="footer-container flex-row">
-      <img class="logo-white" src="./images/logo-white.svg" alt="clipboard logo">
+    <div class="footer-container flex-row-footer">
+      <a href="#"> <img class="logo-white" src="./images/logo-white.svg" alt="clipboard logo"></a>
+
 
       <ul class="flex-list">
-        <div class="list">
-          <li>FAQs</li>
-          <li>Contact Us</li>
-        </div>
-        <div class="list">
-          <li>Privacy Policy</li>
-          <li>Press Kit</li>
-        </div>
-        <li>Install Guide</li>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Privacy</a> Policy</li>
+        <li><a href="#">Press Kit</a></li>
+        <li><a href="#">Install Guide</a></li>
       </ul>
 
-      <ul>
-        <li><img src="./images/icon-facebook.svg" alt="facebook"></li>
-        <li><img src="./images/icon-instagram.svg" alt="instagram"></li>
-        <li><img src="./images/icon-twitter.svg" alt="icon-twitter"></li>
+      <ul class="flex-list-logo">
+        <li><img src="./images/facebook.svg" alt="facebook"></li>
+        <li><img src="./images/instagram.svg" alt="instagram"></li>
+        <li><img src="./images/twitter.svg" alt="twitter"></li>
       </ul>
     </div>
   </footer>
