--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <main class="container">
-    <a href="#"> <img class="logo" src="./images/logo.svg" alt="clipboard logo"></a>
+    <a href="index.html"> <img class="logo" src="./images/logo.svg" alt="clipboard logo"></a>
 
     <h1 class="pb-20">A history of everything you copy</h1>
     <p class="body pb-40">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
