--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
       <p class="body-medium">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
     </div>
     <article class="grid-2x overflow">
-      <img class="computer" src="./images/image-computer.png" alt="clipboard software">
+
+      <picture class="computer">
+        <img src="./images/image-computer.png" alt="clipboard software">
+
+        <img class="computer-hover" src="./images/computer-hover.png" alt="clipboard software">
+
+      </picture>
+
 
       <div class="specs">
         <div>
